# litestar-template

./: .gitignore  .prettierrc  pyproject.toml
app/: app.py  config.py
app/config/: __init__.py  config.py
app/core/: component.py  orm.py  schema.py
app/domain/account/: entity.py  impl.py  repo.py
app/domain/account/entities/: __init__.py  account.py  oidc.py
app/handler/cmd/: system.py
app/handler/http/: __init__.py
app/handler/http/endpoint/: __init__.py  auth.py  healthcheck.py  system.py
app/service/account/: schema.py  service.py
app/service/system/: schema.py  service.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/unit/domain/account/: test_account_impl.py
